2013-06-12  Mischa Jonker <mjonker@synopsys.com>

	* dejagnu/telnet-extra.exp: Make new line handling consistent
	with rsh_exec.

2013-06-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Also fetch tags.
	* tag-release.sh: Make sure tool chain repo is up to date.

2013-06-07  Anton Kolesov <anton.kolesov@synopsys.com>

	* run-tests.sh: Add --elf32-nsim-props option to specify nSIM properties
	file.
	* dejagnu/nsim-extra.exp: Use conventional environment variable name for
	nSIM properties file path.

2013-06-03  Anton Kolesov <anton.kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp: Correct typo.

2013-05-31  Anton Kolesov <anton.kolesov@synopsys.com>

	* get-random-port.sh: Script that returns random port number that is free.
	* dejagnu/nsim-extra.exp, dejagnu/baseboards/arc-nsim.exp: Use
	get-random-port.sh instead of incremented ports and set very big
	max_reload_reboots value.

2013-05-23	Anton Kolesov <anton.kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp, dejagnu/baseboards/arc-nsim.exp: Change
	functions where watchdog breakpoints are set from 'abort' and '_exit' to
	'exit' and '_exit_r', use NSIM_HOME environment variable to start nsim_gdb
	instance, use option -reconnect of nsim_gdb, use only a limited range of
	TCP ports for GDB communication.

2013-05-14  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Explicitly choose /bin/sh.
	* build-all.sh: Change == to = in tests throughout.
	* build-elf32.sh: Change == to = in tests throughout.
	* check-results.sh: Change == to = in tests throughout, use
	/bin/sh, not /bin/bash.
	* diff-all.sh: Use /bin/sh, not /bin/bash.
	* diff-tests.sh: Likewise
	* get-ip.sh: Change == to = in tests throughout, use
	/bin/sh, not /bin/bash.

2013-05-09  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: No need to delete C++ libraries.
	* check-results.sh: Better alignment for 6 digit totals.

2013-05-08  Jeremy Bennett <jeremy.bennett@embecosm.com>
